Some changes around language on buttons and pages

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>RealWorth&trade; - Find RealWorth&trade; of Business!</title>
 
 <!-- Bootstrap -->
@@ -26,6 +25,7 @@
   background-image: url("img/home-pr-1.jpg");
 }
 </style>
+
 <style type="text/css">
 .auth0-lock-header, .auth0-lock-badge-bottom {
     display: none;
@@ -37,9 +37,9 @@
 	    top: -20px !important;
     right: -22px !important;
 }
-    </style>
+</style>
 
-        <style>
+<style>
 
 /*
     Note: It is best to use a less version of this file ( see http://css2less.cc
@@ -146,7 +146,6 @@
 }
 
 </style>
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SR252ETTY4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -159,34 +158,18 @@
 </head>
 <body ng-app="myApp">
 <div id="main">
-
-
     <div ng-include="'resources/pages/header.html'"></div>
     <div class="page-loading" ng-show="loader">
         <div class="svgImage"></div>
     </div>
     <div ui-view id="ui-view"></div>
-<!--    <div ui-view="">-->
 </div>
-
-
 
 <footer id="footer">
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col col-md-10">
         <div class="row justify-content-md-center">
-          <!-- <div class="col-md-4 col-sm-4"> -->
-            <!-- <p><span class="icon-uilove icon-uilove-realestate"></span></p> -->
-            <!-- <address> -->
-            <!-- <strong>ProSwift, Inc.</strong><br> -->
-            <!-- 2140 Peralta Blvd Suite # 204<br> -->
-            <!-- Fremont, CA 94536<br> -->
-            <!-- <abbr title="Phone">P:</abbr> (510)-400-7444 -->
-            <!-- </address> -->
-            <!-- <p class="text-muted">Copyright &copy; 2018<br /> -->
-              <!-- All rights reserved</p> -->
-          <!-- </div> -->
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Company</h5>
             <ul class="list-unstyled">
@@ -197,7 +180,6 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Contact</h5>
             <ul class="list-unstyled">
-              <!-- <li><a href="#">FAQs</a></li> -->
               <li><a href="#" data-toggle="modal" data-target="#termsOfService">Terms of Service</a></li>
               <li><a href="#" data-toggle="modal" data-target="#privacyPolicy">Privacy Policy</a></li>
               <li><a href="#contactUs">Contact Us</a></li>
@@ -206,26 +188,16 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Connect</h5>
             <div class="social-sharebox">
-                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
                 <a href="https://facebook.com/brw2020" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://linkedin.com/in/bizrealworth" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
-            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> <a href="#"><i class="fa fa-pinterest"></i></a> -->
-            <!-- <form>
-              <h4>Subscribe Newsletter</h4>
-              <div class="input-group input-group-lg">
-                <input type="email" class="form-control" placeholder="Email Address">
-                <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">Go!</button>
-                </span> </div>
-            </form> -->
           </div>
         </div>
       </div>
     </div>
   </div>
   <div style="text-align:center;border:1px solid red;">
-    <h6 subheadline><small>&copy; 2020 BizRealWorth&trade; Designed and Developed in California.</small></h6>
+    <h6><small>&copy; 2020 BizRealWorth&trade; Dedicated to help Small and Medium size businesses all over USA.</small></h6>
   </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
@@ -261,19 +233,13 @@
 </body>
  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc0CLCHpUtmyrQmfcEgESIy_OYVICHT6I&libraries=places"></script>
 
-<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_hBkjJyRoMYVqN6DdM7E8mWTtDO-mVns&libraries=places"-->
-<!--            async defer></script>-->
-
 <script src="https://code.angularjs.org/1.2.13/angular.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-<!-- amazon javascript sdk cdn file -->
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.24.min.js"></script>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="lib/jquery-3.2.1.min.js"></script>
 <script src="lib/aos/aos.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="lib/selectric/jquery.selectric.js"></script>
 <script src="lib/Magnific-Popup/jquery.magnific-popup.min.js"></script>
 <script src="lib/popper.min.js"></script>
@@ -284,30 +250,12 @@
 <script src="lib/sticky-sidebar/theia-sticky-sidebar.min.js"></script>
 <script src="lib/lib.js"></script>
 
-
 <script src="resources/js/app.js"></script>
 <script src="resources/js/app.run.js"></script>
 
-<!-- <script type="text/javascript" src="resources/js/app.run.js"></script>
-<script type="text/javascript" src="resources/autho/auth0-variables.js"></script>
-<script type="text/javascript" src="resources/navbar/navbar.directive.js"></script>
-<script type="text/javascript" src="resources/callback/callback.controller.js"></script> -->
-
-
-<!--
-<script src="resources/node_modules/auth0-js/build/auth0.js"></script>
-<script type="text/javascript" src="resources/node_modules/angular-auth0/dist/angular-auth0.js"></script>
-
-<script type="text/javascript" src="resources/node_modules/angular-route/angular-route.js"></script>
-
- <script type="text/javascript" src="resources/node_modules/angular-route/angular-route.js"></script>
- -->
-
-    <script type="text/javascript" src="node_modules/auth0.js"></script>
-    <script type="text/javascript" src="node_modules/auth0-variables.js"></script>
-    <script type="text/javascript" src="node_modules/angular-auth0.js"></script>
-
-
+<script type="text/javascript" src="node_modules/auth0.js"></script>
+<script type="text/javascript" src="node_modules/auth0-variables.js"></script>
+<script type="text/javascript" src="node_modules/angular-auth0.js"></script>
 
 <script src="resources/controller/homeController.js"></script>
 <script src="resources/controller/searchController.js"></script>
@@ -329,25 +277,5 @@
 <script src="resources/controller/createSearchAgentController.js"></script>
 <script src="resources/controller/listSearchAgentController.js"></script>
 <script src="resources/controller/businessBuyGuidanceController.js"></script>
-
-
-<!--
-<script type="text/javascript" src="https://cdn.auth0.com/js/lock/10.2/lock.min.js"></script>
-<script src="resources/node_modules/angular-lock/dist/angular-lock.js"></script>
-<script src="resources/node_modules/angular-jwt/dist/angular-jwt.js"></script>
-<script type="text/javascript" src="resources/autho/app.run.js"></script>
-<script type="text/javascript" src="resources/autho/auth0-variables.js"></script> -->
-
-
-
-
-
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </html>
