--- a/src/main/resources/static/resources/pages/accountSettings.html
+++ b/src/main/resources/static/resources/pages/accountSettings.html
@@ -9,8 +9,8 @@
                 <div class="list-group no-border list-unstyled">
                   <span class="list-group-item heading">Manage Account</span>
                   <a ui-sref=".changePassword" class="list-group-item"><i class="fa fa-fw fa-lock"></i> Change Password</a>
-                  <a ui-sref=".notification" class="list-group-item"><i class="fa fa-fw fa-bell-o"></i> Email Subscription</a>
-                  <a ui-sref=".socialAccounts" class="list-group-item"><i class="fa fa-fw fa-cog"></i> Social Accounts</a>
+                  <!-- <a ui-sref=".notification" class="list-group-item"><i class="fa fa-fw fa-bell-o"></i> Email Subscription</a> -->
+                  <!-- <a ui-sref=".socialAccounts" class="list-group-item"><i class="fa fa-fw fa-cog"></i> Social Accounts</a> -->
                 </div>
               </div>
             </div>
