--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -23,9 +23,9 @@
                 <a href="#" class="dropdown-item">Search Business to Buy</a>
                 <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
                 <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
-                <a href="#" class="dropdown-item">Find the RealWorth of Business you thinking to Buy</a>
-                <a href="#searchAgents" class="dropdown-item">Find Brokers/Attorneys/Consultants/Advisors/Experts*</a>
-		        <a href="#contactUs" class="dropdown-item">Apply for Business Loan*</a>
+                <a href="#" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
+                <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Buy</a>
+		        <a href="#contactUs" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
             </div>
         </li>
     </ul>
@@ -38,7 +38,7 @@
             <a href="#" class="dropdown-item">Sell a business</a>
             <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
             <a href="#search" class="dropdown-item">Find the RealWorth of your Business</a>
-            <a href="#searchAgents" class="dropdown-item">Find Business Brokers/Attorneys/Help to Sell</a>
+            <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Sell</a>
         </div>
     </li>
     </ul>
@@ -50,9 +50,9 @@
             <div class="dropdown-menu">
                 <a href="#search" class="dropdown-item">Claim your Business</a>
                 <a href="#search" class="dropdown-item">How much is my Business RealWorth?</a>
-                <a href="#businessBuyGuidance" class="dropdown-item">How do I increase RealWorth of my business?</a>
+                <a href="#contactUs" class="dropdown-item">How do I increase RealWorth of my Business?</a>
                 <a href="#contactUs" class="dropdown-item">My Business is in trouble!</a>
-                <a href="#contactUs" class="dropdown-item">Not able to find your business??</a>
+                <a href="#contactUs" class="dropdown-item">Not able to find my Business?</a>
             </div>
         </li>
     </ul>
@@ -62,17 +62,16 @@
             Business Service Providers
         </a>
           <div class="dropdown-menu">
-                <a href="#searchAgents" class="dropdown-item">Brokers</a>
-                <a href="#searchAgents" class="dropdown-item">Attorneys</a>
-                <a href="#searchAgents" class="dropdown-item">Consultants</a>
-                <a href="#searchAgents" class="dropdown-item">Advisors</a>
-                <a href="#searchAgents" class="dropdown-item">Experts</a>
-                <a href="#contactUs" class="dropdown-item">Advertise with RealWorth</a>
-                <a href="#searchAgents" class="dropdown-item">Search</a>
+          		<a href="#searchAgents" class="dropdown-item">Search Business Service Providers</a>
+                <a href="#contactUs" class="dropdown-item">Register as Business Broker</a>
+                <a href="#contactUs" class="dropdown-item">Register as Business Appraiser</a>
+                <a href="#contactUs" class="dropdown-item">Register as Business Attorney</a>
+                <a href="#contactUs" class="dropdown-item">Register as M&A Advisor</a>
+                <a href="#contactUs" class="dropdown-item">Advertise with BizRealWorth</a>
             </div>
       </li>
       <li class="nav-item">
-          <a class="nav-link nav-btn" ng-click="">1-855-5-CALL-RW <b style="color:red">&#9990; (855) 522-5579</b></a>
+          <a class="nav-link nav-btn" ng-click="">1-855-5-CALL-RW<b style="color:red"> &#9990; (855) 522-5579</b></a>
       </li>
     </ul>
 
@@ -82,9 +81,9 @@
           <span class="user-image" style="background-image:url({{ profile.picture }});"></span>
         </a>
         <div class="dropdown-menu">
-						<a class="dropdown-item" href="#myProfile">Profile</a>
-						<a class="dropdown-item" href="#accountSettings/changePassword">Account Settings</a>
-						<a class="dropdown-item" href="#membershipPayment/membership">Membership & Payements</a>
+			<a class="dropdown-item" href="#myProfile">Profile</a>
+			<!-- <a class="dropdown-item" href="#accountSettings/changePassword">Account Settings</a> -->
+			<!-- <a class="dropdown-item" href="#membershipPayment/membership">Membership & Payements</a> -->
             <a class="dropdown-item"  href="#" ng-click="authService.logout()">Log out</a>
         </div>
       </li>
@@ -110,7 +109,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
                         class="sr-only">Close</span></button>
-                <h4 class="modal-title"><i class="fa icon-info-circled-alt"></i> Login
+                <h4 class="modal-title"><i class="fa icon-info-circled-alt"></i>Login
                 </h4>
             </div>
             <div class="modal-body">
@@ -141,7 +140,7 @@
 		</div>
                 <form role="form">
                      <div class="form-group">
-                         <label for="sender-email" class="control-label">Username:</label>
+                         <label for="sender-email" class="control-label">User Name:</label>
 
                          <div class="input-icon"><i class="icon-user fa"></i>
                              <input id="sender-email" type="text" placeholder="Username"
@@ -163,19 +162,19 @@
             </div>
             <div class="modal-footer">
                 <div class="checkbox pull-left">
-                    <label> <input type="checkbox" value="1" name="remember" id="remember"> Keep me logged
-                        in</label>
+                    <label> <input type="checkbox" value="1" name="remember" id="remember">Keep me Logged
+                        In</label>
                 </div>
 
 
-                <p class="text-center pull-right"><a href="forgot-password.html"> Lost your password? </a>
+                <p class="text-center pull-right"><a href="forgot-password.html">Lost your password?</a>
                 </p>
 
                 <div style=" clear:both"></div>
             </div>
             <div class="login-box-btm text-center">
                         <p> Don't have an account? <br>
-                            <a href="#newsignup"  data-toggle="modal"><strong>Sign Up !</strong> </a></p>
+                            <a href="#newsignup"  data-toggle="modal"><strong>Sign Up!</strong> </a></p>
                             <p><div id="content"></div></p>
                     </div>
         </div>
