--- a/src/main/resources/static/resources/pages/productsAndServices.html
+++ b/src/main/resources/static/resources/pages/productsAndServices.html
@@ -54,7 +54,8 @@ h3 h5 h6 {
 </style>
 <div class="about-section">
     <h3>Products and Services offered by BizRealWorth </h3>
-    <h5>A. Business ‘For Sell’ Listing Service</h5>
+    <h5>A. Business Listing Services</h5>
+    <p>Services Include - Business For Sell, Business Franchise Available, Business For Lease, Business Real Estate For Sale, Business Real Estate For Lease, Land For Sale, Land For Lease, Looking For Business Partner, Business Co-Location For Lease, Coming Soon, etc</p>
     <table>
         <tbody>
         <tr>
@@ -63,19 +64,24 @@ h3 h5 h6 {
             <th>Price</th>
         </tr>
         <tr>
-            <td>Plan A - 6 months</td>
-            <td>Free for 3 months</td>
-            <td>USD 29 per month - One time payment of USD 174</td>
+            <td><b>Plan A - 12 months</b></td>
+            <td>Free for 4 months</td>
+            <td><b>$29</b> per month - One time phone payment of <b>$232</b></td>
         </tr>
         <tr>
-            <td>Plan B - 3 months</td>
+            <td><b>Plan B - 6 months</b></td>
+            <td>Free for 2 months</td>
+            <td><b>$39</b> per month - One time phone payment of <b>$156</b></td>
+        </tr>
+        <tr>
+            <td><b>Plan C - 3 months</b></td>
             <td>Free for 1 month</td>
-            <td>USD 39 per month - One time payment of USD 117</td>
+            <td><b>$49</b> per month - One time payment of <b>$98</b></td>
         </tr>
         <tr>
-            <td>Plan C - 1 month</td>
-            <td>Free for 1 week</td>
-            <td>USD 49 per month - One time payment of USD 49</td>
+            <td><b>Plan D - month-to-month</b></td>
+            <td>NA</td>
+            <td><b>$59</b> per month - Monthly payment of <b>$59</b></td>
         </tr>
         </tbody>
     </table>
@@ -93,7 +99,7 @@ h3 h5 h6 {
             <th>Basic</th>
         </tr>
         <tr>
-            <td>Comprehensive business valuation for any size company including litigation support</td>
+            <td><b>Comprehensive business valuation for any size company including litigation support</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>No</td>
@@ -101,7 +107,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Allows detailed financial statement input</td>
+            <td><b>Allows detailed financial statement input</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -109,7 +115,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Provides Detailed DCF method</td>
+            <td><b>Provides Detailed DCF method</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -117,7 +123,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Extra earnings basis and Black & Green Build up method</td>
+            <td><b>Extra earnings basis and Black and Green Build up method</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>No</td>
@@ -125,7 +131,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>International Version Available*</td>
+            <td><b>International Version Available*</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>No</td>
@@ -133,7 +139,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Comparison with Recently Sold Businesses in the same city or socio-economical area</td>
+            <td><b>Comparison with Recently Sold Businesses in the same city or socio-economical area</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -141,7 +147,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Formal Evaluation</td>
+            <td><b>Formal Evaluation</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>No</td>
@@ -149,7 +155,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Considers Valuation of Equipment, Inventory and other assets</td>
+            <td><b>Considers Valuation of Equipment, Inventory and other assets</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -157,7 +163,7 @@ h3 h5 h6 {
             <td>No</td>
         </tr>
         <tr>
-            <td>Produces “Most Probable Selling Price” Report</td>
+            <td><b>Produces “Most Probable Selling Price” Report</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -165,7 +171,7 @@ h3 h5 h6 {
             <td>Yes</td>
         </tr>
         <tr>
-            <td>Business Details aggregated from various public and private sources</td>
+            <td><b>Business Details aggregated from various public and private sources</b></td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
@@ -173,11 +179,11 @@ h3 h5 h6 {
             <td>Yes</td>
         </tr>
         <tr>
-            <td>Price</td>
-            <td>Based on Scope of Work</td>
-            <td>Based on Scope of Work</td>
-            <td>$499</td>
-            <td>$199(Free with Claim Your Business) **</td>
+            <td><b>Price</b></td>
+            <td><b>Based on Scope of Work</b></td>
+            <td><b>Based on Scope of Work</b></td>
+            <td><b>$499</b></td>
+            <td><b>$199</b>(Free with Claim Your Business) **</td>
             <td>Free</td>
         </tr>
         </tbody>
