--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -182,9 +182,9 @@
                                 <img style="width:100%;height:400px;" src="../img/1.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <h5 style="color:white;">Business Real Worth Matters!</h5>
                                 <p style="color:white;">
-                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                    Have you considered buying or selling a business or company? Do you know how much it is really worth? Buying or Selling a business is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is really worth. Use our resources to find the RralWorth&trade; of business you are planning...
                                 </p>
                                 <a href="#businessBuyGuidance" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
@@ -197,10 +197,11 @@
                                 <img style="width:100%;height:400px;" src="../img/2.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <h5 style="color:white;">We Stand United!</h5>
                                 <p style="color:white;">
-                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                    We stand together with all Small and Medium scale Business community in these trying times of COVID-19. Please contact us, share your story and take advantage of our 6 months free listing...
                                 </p>
+                                <a href="#contactUs" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
                         </div>
                     </div>
@@ -210,10 +211,11 @@
                                 <img style="width:100%;height:400px;" src="../img/3.jpg" alt="First slide">
                             </div>
                             <div class="col-md-5 col-lg-5 col-xl-5">
-                                <h5 style="color:white;">How a Business Valuation Can Help Your Business</h5>
+                                <h5 style="color:white;">How to Select a Business Valuation Expert?</h5>
                                 <p style="color:white;">
-                                    Have you considered selling a Southwest Florida company? Do you know how much it is worth? Selling a business you own is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is worth. It can...
+                                    The selection of a business valuation expert becomes critical if you or your clients have a need to “know” what the value of a business is.  There are several considerations...
                                 </p>
+                                <a href="#contactUs" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
                         </div>
                     </div>
