--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -115,7 +115,7 @@
                                                 </div>
                                             </div>
                                             <div class="card-header" role="tab">
-                                                <h4 class="panel-title">RealWorth Estimates</h4>
+                                                <h4 class="panel-title">RealWorth&trade; Estimates</h4>
                                             </div>
                                             <div id="specification" class="panel-collapse collapse show" role="tabpanel">
                                                 <div class="card-body">
@@ -304,7 +304,7 @@
                                     <p style="margin-bottom: 0" ng-if="equipment.maintenanceCost">Monthly maintenance cost - {{equipment.maintenanceCost | number}}</p>
                                 </div>
                                 <div ng-if="equipmentList.length === 0">
-                                    <p>Sorry, We don't have equipments information for this Business.</p>
+                                    <p>No equipment related information for this Business is available at this time.</p>
                                 </div>
                             </div>
                     </div>
