Static changes on pages - add nacva logo etc

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -7,7 +7,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light" id="menu" ng-init="getprofile()">
   <a class="navbar-brand" href="#home">
-  	<div class="" style="display: flex;"><img src="img/logo1.png" alt="" style="height: 50px;width: 200px;"><h3 style="color:rgba(0,0,0,.5);padding-left:10px;"></h3></div>
+  	<div class="" style="display: flex;"><img src="img/logo.png" alt="" style="height: 50px;width: 200px;"><h3 style="color:rgba(0,0,0,.5);padding-left:10px;"></h3></div>
   </a>
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#menu-content" aria-controls="menu-content" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                 <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
                 <a href="#" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
                 <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Buy</a>
-		        <a href="#contactUs" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
+		<a href="#contactUs" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
             </div>
         </li>
     </ul>
