--- a/src/main/resources/static/resources/pages/productsAndServices.html
+++ b/src/main/resources/static/resources/pages/productsAndServices.html
@@ -92,8 +92,8 @@ h3 h5 h6 {
         <tbody>
         <tr>
             <th>Features</th>
-            <th>NACVA Certified</th>
-            <th>IBSA Certified</th>
+            <th>NACVA Certified<a href="https://www.nacva.com" target="_blank"><img src="img/NACVA_logo.png" alt="NACVA" width="300" height="50"></a></th>
+            <th>IBSA Certified<a href="https://www.intlbca.com" target="_blank"><img src="img/ISBA_logo.png" alt="IBSA" width="300" height="50"></a></th>
             <th>Professional</th>
             <th>Express</th>
             <th>Basic</th>
